# nn-vs-ann

./: LICENSE  README.md  pyproject.toml
assets/: results.csv
src/nn_vs_ann/: __init__.py  benchmark.py  gen.py  viz.py
src/tests/: test_benchmark.py
templates/: README.md.template
