[tool.poetry]
name = "nn-vs-ann"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  {from = "src", include="nn_vs_ann"}, 
  {from = "src", include = "tests"}
]

[tool.poetry.dependencies]
python = "==3.10.*"
numpy = "==1.23.*"
hnswlib = "==0.7.*"
pandas = "==1.5.*"
matplotlib = "^3.7.1"
numba = "^0.56.4"
tabulate = "^0.9.0"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.2.2"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
